--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <button v-on:click="onSubmit">加入购物车</button>
     </div>
 
-    <br>
+    <br />
     <div id="result"></div>
   </body>
 
@@ -101,7 +101,7 @@
         onSubmit: (ev) => {
           ev.stopPropagation();
           ev.preventDefault();
-          document.getElementById("result").innerHTML = ""
+          document.getElementById("result").innerHTML = "";
           let cookieEles = document.querySelectorAll("input[name*=cookie]"),
             productEles = document.querySelectorAll("input[name*=product]"),
             countryEles = document.querySelectorAll("input[type=checkbox]"),
@@ -145,11 +145,54 @@
   </script>
 
   <script>
+    var bbs = [
+      "H079086CC2S",
+      "H079086CK37",
+      "H079086CC37",
+      "H079086CC18",
+      "H079086CKI2",
+      "H079086CC89",
+      "H079086CK8F",
+      "H079086CK18",
+      "H079086CCS3",
+      "H079086CKS3",
+      "H079086CK89",
+      "H079103CKW0",
+      "H079103CKP9",
+      "H079103CCV0",
+      "H079086CKI6",
+      "H079086CCS4",
+      "H079103CKS4",
+      "H079103CKK4",
+      "H079086CK08",
+      "H079086CK9J",
+      "H079086CK2Z",
+      "H079086CK9R",
+      "H079086CK8W",
+      "H079086CC0E",
+      "H079086CK1K",
+    ];
 
-    // H056289CC37，H056289CC18，H056289CK18，H056289CKI2，H056289CC8F，H056289CC08，H056289CC10，H056289CCW0，H056289CC8L，H056289CC01，H056289CCQ1，H069560CKAR，H073597CC37，H073597CC3I，H073597CCD0，H073597CCM8，H073597CK3I，H075208CKAK，H077913CC34，H076293CKAJ，H056289CK37，H056289CK10
-    axios.get("https://bck.hermes.cn/product-page?locale=nl_en&productsku=H056289CC37")
-    .then(res => {
-      console.log(res);
-    })
+    var cts = [
+      "nl_en",
+      "cn_zh",
+      "uk_en",
+      "it_it",
+      "de_de",
+      "fr_fr",
+      "us_en",
+      "ca_en",
+      "au_en",
+    ];
+
+    const b = bbs[0];
+
+    // axios.get(`https://bck.hermes.cn/product-page?locale=nl_en&productsku=${b}`)
+    // .then(res => res.data)
+    // .then(data => data.stock.ecom)
+    // .then(ecom => {
+    //   console.log(ecom);
+    //   // if(ecom)
+    // })
   </script>
 </html>
